--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ default = ["console_error_panic_hook"]
 
 [dependencies]
 wasm-bindgen = "0.2.63"
+bin_packer_3d = "1.0.0"
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
@@ -32,3 +33,19 @@ wasm-bindgen-test = "0.3.13"
 [profile.release]
 # Tell `rustc` to optimize for small code size.
 opt-level = "s"
+# enable debug symbols, and more:
+# debug = true
+
+## Allows us to return a String from our render method.
+## https://stackoverflow.com/a/64507864/1884158
+#[package.metadata.wasm-pack.profile.release]
+#wasm-opt = ["-Oz", "--enable-mutable-globals"]
+
+
+# allows us to use console logging within our wasm:
+# https://rustwasm.github.io/docs/book/reference/debugging.html#logging-with-the-console-apis
+[dependencies.web-sys]
+version = "0.3"
+features = [
+    "console",
+]
