--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,9 @@ console_error_panic_hook = { version = "0.1.6", optional = true }
 wee_alloc = { version = "0.4.5", optional = true }
 js-sys = "0.3.45"
 
+serde_json = "1.0.59"
+thiserror = "1.0.20"
+
 [dev-dependencies]
 wasm-bindgen-test = "0.3.13"
 
