--- a/www/package.json
+++ b/www/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "copy-webpack-plugin": "^5.0.0",
     "hello-wasm-pack": "^0.1.0",
+    "prettier": "^2.2.1",
     "ts-loader": "^8.0.12",
     "typescript": "^4.1.3",
     "webpack": "^4.29.3",
