--- a/www/package.json
+++ b/www/package.json
@@ -27,16 +27,15 @@
   },
   "homepage": "https://github.com/rustwasm/create-wasm-app#readme",
   "dependencies": {
+    "react": "^17.0.1",
     "wasm-previewer": "file:../pkg"
   },
   "devDependencies": {
-    "copy-webpack-plugin": "^5.0.0",
-    "hello-wasm-pack": "^0.1.0",
     "prettier": "^2.2.1",
     "ts-loader": "^8.0.12",
     "typescript": "^4.1.3",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5"
+    "webpack-dev-server": "^3.11.0"
   }
 }
