--- a/www/tsconfig.json
+++ b/www/tsconfig.json
@@ -5,6 +5,7 @@
     "module": "es2020",
     "target": "es5",
     "jsx": "react",
-    "allowJs": true
+    "allowJs": true,
+    "esModuleInterop": true
   }
 }
