--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,8 @@ default = ["console_error_panic_hook"]
 
 [dependencies]
 wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
-bin_packer_3d = "1.0.0"
+# TODO: commenting this out for now for local development
+# bin_packer_3d = "2.0.0"
 
 serde = { version = "1.0", features = ["derive"] }
 
@@ -33,6 +34,17 @@ js-sys = "0.3.45"
 serde_json = "1.0.59"
 thiserror = "1.0.20"
 
+# allows us to use console logging within our wasm:
+# https://rustwasm.github.io/docs/book/reference/debugging.html#logging-with-the-console-apis
+[dependencies.web-sys]
+version = "0.3"
+features = [
+    "console",
+]
+
+[dependencies.bin_packer_3d]
+path = "../bin_packer_3d_rust"
+
 [dev-dependencies]
 wasm-bindgen-test = "0.3.13"
 
@@ -46,12 +58,3 @@ opt-level = "s"
 ## https://stackoverflow.com/a/64507864/1884158
 #[package.metadata.wasm-pack.profile.release]
 #wasm-opt = ["-Oz", "--enable-mutable-globals"]
-
-
-# allows us to use console logging within our wasm:
-# https://rustwasm.github.io/docs/book/reference/debugging.html#logging-with-the-console-apis
-[dependencies.web-sys]
-version = "0.3"
-features = [
-    "console",
-]
