--- a/www/package.json
+++ b/www/package.json
@@ -27,12 +27,17 @@
   },
   "homepage": "https://github.com/rustwasm/create-wasm-app#readme",
   "dependencies": {
+    "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "autoprefixer": "^10.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "tailwindcss": "^2.0.2",
     "wasm-previewer": "file:../pkg"
   },
   "devDependencies": {
+    "postcss": "^8.2.1",
+    "postcss-loader": "^4.1.0",
     "prettier": "^2.2.1",
     "ts-loader": "^8.0.12",
     "typescript": "^4.1.3",
