--- a/www/package.json
+++ b/www/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "build": "webpack --config webpack.config.js",
+    "build-css": "npx tailwindcss-cli@latest build -o tailwind.css",
     "start": "webpack-dev-server"
   },
   "repository": {
@@ -36,9 +37,11 @@
     "wasm-previewer": "file:../pkg"
   },
   "devDependencies": {
+    "css-loader": "^5.0.1",
     "postcss": "^8.2.1",
     "postcss-loader": "^4.1.0",
     "prettier": "^2.2.1",
+    "style-loader": "^2.0.0",
     "ts-loader": "^8.0.12",
     "typescript": "^4.1.3",
     "webpack": "^4.29.3",
