--- a/www/package.json
+++ b/www/package.json
@@ -9,6 +9,8 @@
   "scripts": {
     "build": "webpack --config webpack.config.js",
     "build-css": "npx tailwindcss-cli@latest build -o tailwind.css",
+    "build-custom-css": "npx tailwindcss-cli@latest build ./src/styles.css -o tailwind.css",
+    "test": "jest",
     "start": "webpack-dev-server"
   },
   "repository": {
@@ -37,7 +39,9 @@
     "wasm-previewer": "file:../pkg"
   },
   "devDependencies": {
+    "@testing-library/react": "^11.2.2",
     "css-loader": "^5.0.1",
+    "jest": "^26.6.3",
     "postcss": "^8.2.1",
     "postcss-loader": "^4.1.0",
     "prettier": "^2.2.1",
