--- a/www/tsconfig.json
+++ b/www/tsconfig.json
@@ -4,6 +4,10 @@
     "noImplicitAny": true,
     "module": "es2020",
     "target": "es5",
+    "lib": [
+      "es2019",
+      "dom"
+    ],
     "jsx": "react",
     "allowJs": true,
     "esModuleInterop": true
