--- a/www/tsconfig.json
+++ b/www/tsconfig.json
@@ -10,6 +10,7 @@
     ],
     "jsx": "react",
     "allowJs": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "moduleResolution": "node"
   }
 }
