--- a/www/package.json
+++ b/www/package.json
@@ -30,17 +30,22 @@
   },
   "homepage": "https://github.com/rustwasm/create-wasm-app#readme",
   "dependencies": {
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/webpack": "^4.41.25",
     "autoprefixer": "^10.1.0",
+    "babel-jest": "^26.6.3",
     "bin_packer_3d": "^0.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
-    "@testing-library/react": "^11.2.2",
+    "@babel/preset-typescript": "^7.12.7",
+    "@testing-library/react": "^11.2.3",
+    "@types/jest": "^26.0.20",
     "css-loader": "^5.0.1",
     "html-webpack-plugin": "^4.5.0",
     "jest": "^26.6.3",
