--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "bin_packer_3d"
+name = "bin_packer_3d_wasm"
 version = "0.1.1"
 authors = ["modulitos <modulitos@users.noreply.github.com>"]
 edition = "2018"
@@ -12,8 +12,7 @@ default = ["console_error_panic_hook"]
 
 [dependencies]
 wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
-# TODO: commenting this out for now for local development
-# bin_packer_3d = "2.0.0"
+bin_packer_3d = "2.0.0-beta-1"
 
 serde = { version = "1.0", features = ["derive"] }
 
@@ -42,8 +41,8 @@ features = [
     "console",
 ]
 
-[dependencies.bin_packer_3d]
-path = "../bin_packer_3d_rust"
+#[dependencies.bin_packer_3d]
+#path = "../bin_packer_3d_rust"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.13"
