--- a/www/package.json
+++ b/www/package.json
@@ -10,7 +10,9 @@
     "build": "webpack --config webpack.config.js",
     "build-css": "npx tailwindcss-cli@latest build -o tailwind.css",
     "build-custom-css": "npx tailwindcss-cli@latest build ./src/styles.css -o ./src/tailwind.css",
-    "test": "jest",
+    "test": "node --experimental-modules --experimental-wasm-modules --experimental-vm-modules node_modules/.bin/jest",
+    "test-clear": "node --experimental-modules --experimental-wasm-modules --experimental-vm-modules node_modules/.bin/jest --clearCache",
+    "test-jest": "jest",
     "start": "webpack-dev-server"
   },
   "repository": {
@@ -32,27 +34,36 @@
   "dependencies": {
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
+    "@types/point-in-polygon": "^1.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/webpack": "^4.41.25",
     "autoprefixer": "^10.1.0",
     "babel-jest": "^26.6.3",
     "bin_packer_3d": "^0.1.1",
+    "dedent": "^0.7.0",
+    "point-in-polygon": "^1.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.12.1",
     "@babel/preset-typescript": "^7.12.7",
     "@testing-library/react": "^11.2.3",
     "@types/jest": "^26.0.20",
+    "@types/testing-library__jest-dom": "^5.9.5",
     "css-loader": "^5.0.1",
     "html-webpack-plugin": "^4.5.0",
     "jest": "^26.6.3",
+    "jest-fetch-mock": "^3.0.3",
+    "jest-module-field-resolver": "0.0.1",
     "postcss": "^8.2.1",
     "postcss-loader": "^4.1.0",
     "prettier": "^2.2.1",
+    "react-test-renderer": "^17.0.1",
     "style-loader": "^2.0.0",
+    "ts-jest": "^26.4.4",
     "ts-loader": "^8.0.12",
     "typescript": "^4.1.3",
     "webpack": "^4.29.3",
