--- a/www/package.json
+++ b/www/package.json
@@ -37,10 +37,13 @@
     "bin_packer_3d": "^0.1.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "tailwindcss": "^2.0.2"
+    "react-three-fiber": "^5.3.18",
+    "tailwindcss": "^2.0.2",
+    "three": "^0.125.2"
   },
   "devDependencies": {
     "@testing-library/react": "^11.2.2",
+    "@types/three": "^0.125.0",
     "css-loader": "^5.0.1",
     "html-webpack-plugin": "^4.5.0",
     "jest": "^26.6.3",
