--- a/www/tsconfig.json
+++ b/www/tsconfig.json
@@ -11,6 +11,7 @@
     "jsx": "react",
     "allowJs": true,
     "esModuleInterop": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "downlevelIteration": true
   }
 }
